# clangen

./: .pylintrc  CONTRIBUTING.md  Dockerfile  README.md  main.py  mkdocs.yml  modcreds.md  pyproject.toml  requirements.txt  run.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-ui_sprite.yml  2-audio.yml  3-bug_report.yml  config.yml
.github/workflows/: build-docs.yml  build.yml  formatter.yaml  pylint.yml  test-docs.yml  test.yml
docs/: index.md  report-a-bug.md
docs-resources/stylesheets/: extra.css
docs/contributing/: documentation-resources.md  index.md
resources/: credits_text.json  game_config.json  species.json
resources/audio/: music.json
resources/dicts/: backstories.json  snippet_collections.json
resources/theme/: master_screen_scale.json
schemas/: patrol.schema.json  shortevent.schema.json  thought.schema.json
scripts/: clan.py  conditions.py  debug_console.py  event_class.py  events.py  special_dates.py  utility.py
scripts/cat/: cats.py  enums.py  history.py  names.py  pelts.py  personality.py  save_load.py  skills.py  sprites.py  status.py  thoughts.py
scripts/cat_relations/: inheritance.py  interaction.py  relationship.py
tests/: test_cat.py  test_conditions.py  test_filter_patrol.py  test_freshkill.py  test_group_interaction.py  test_handle_short_events.py  test_interactions.py  test_json.py  test_json_schemas.py  test_lang.py  test_patrol_condition.py  test_pronouns.py  test_relation_events.py  test_save.py  test_thoughts.py  test_utility.py
utils/: version.py
(+279 files in other folders)
